# libavg

./: .gitignore  BuildMacDeps.sh  CMakeLists.txt  CreateVersionFile.py  CreateVersionFile.sh  MakeMacDist.sh  Makefile.am  NEWS  README.md  acinclude.m4  aclocal.m4.patch  avg-config  avg-config.in  avg.dtd  avg_env.sh  avgenv.sh  bootstrap  configure.ac  configure.in  decorate.py  epydoc.cfg  epydoc_libavg.css  fixcopyright.py  install_avg  installfonts.sh  libavg-0.5.1.ebuild  libavg-0.5.2.ebuild  libavg-0.5.9.ebuild  libavg-0.6.0.ebuild  libavg-0.7.0.ebuild  libavg-config.in  libavg.pmproj  mac_avg_env.sh  makedocs.sh  rpi-configure  rpi-gcc  rpi-toolchain.cmake  updateMessages.sh  update_copyright.py  valgrind.cmdline  (+2 more)
python/: CMakeLists.txt  setup.py.in
python/libavg/: __init__.py  apphelpers.py  clicktest.py  filter.py  geom.py  gesture.py  graph.py  methodref.py  mtemu.py  parsecamargs.py  persist.py  sprites.py  statemachine.py  testapp.py  testcase.py  textarea.py  utils.py
python/scripts/: avg_audioplayer  avg_checkcirclespeed  avg_checkcurvespeed  avg_checkcurvespeed.py  avg_checkpolygonspeed  avg_checkspeed  avg_checktouch  avg_checkvsync  avg_chromakey  avg_dumpkeyevents  avg_jitterfilter  avg_showcamera  avg_showfile  avg_showfont  avg_showsvg  avg_test  avg_videoinfo  avg_videoinfo.py  avg_videoplayer
python/tests/: AVTest.py  AnimTest.py  FXTest.py  GestureTest.py  Test.py  VectorTest.py  avgwindowconfig.xml  testapp.py
src/: AVGAVGNode.cpp  AVGAVGNode.h  AVGAudioNode.cpp  AVGAudioNode.h  AVGCamera.cpp  AVGCamera.h  AVGConradRelais.cpp  AVGConradRelais.h  AVGContainer.cpp  AVGContainer.h  AVGDFBDisplayEngine.cpp  AVGDFBDisplayEngine.h  AVGDFBFont.cpp  AVGDFBFont.h  AVGDFBFontManager.cpp  AVGDFBFontManager.h  AVGDFBSurface.cpp  AVGDFBSurface.h  AVGDebugEventSink.cpp  AVGDebugEventSink.h  AVGDivNode.cpp  AVGDivNode.h  AVGEvent.cpp  AVGEvent.h  AVGEventDispatcher.cpp  AVGEventDispatcher.h  AVGException.cpp  AVGException.h  AVGExcl.cpp  AVGExcl.h  AVGExclNode.cpp  AVGExclNode.h  AVGFFMpegDecoder.cpp  AVGFFMpegDecoder.h  AVGFontManager.cpp  AVGFontManager.h  AVGFramerateManager.cpp  AVGFramerateManager.h  AVGImage.cpp  AVGImage.h  (+118 more)
src/anim/: Anim.cpp  Anim.h  AttrAnim.cpp  AttrAnim.h  CMakeLists.txt  ContinuousAnim.cpp  ContinuousAnim.h  EaseInOutAnim.cpp  EaseInOutAnim.h  GroupAnim.cpp  GroupAnim.h  LinearAnim.cpp  LinearAnim.h  Makefile.am  ParallelAnim.cpp  ParallelAnim.h  SimpleAnim.cpp  SimpleAnim.h  StateAnim.cpp  StateAnim.h  WaitAnim.cpp  WaitAnim.h
src/audio/: AOAudioEngine.cpp  AOAudioEngine.h  AOAudioEngineThread.cpp  AOAudioEngineThread.h  AudioBuffer.cpp  AudioBuffer.h  AudioEngine.cpp  AudioEngine.h  AudioFrame.cpp  AudioFrame.h  AudioMsg.cpp  AudioMsg.h  AudioParams.cpp  AudioParams.h  AudioSource.cpp  AudioSource.h  CMakeLists.txt  Dynamics.h  IAudioSource.h  IProcessor.h  Makefile.am  Processor.h  SDLAudioEngine.cpp  SDLAudioEngine.h  testlimiter.cpp
src/base/: Backtrace.cpp  Backtrace.h  BezierCurve.cpp  BezierCurve.h  BicubicSpline.cpp  BicubicSpline.h  CMakeLists.txt  CmdLine.cpp  CmdLine.h  CmdQueue.h  Command.h  ConfigMgr.cpp  ConfigMgr.h  CountedPointer.h  CubicSpline.cpp  CubicSpline.h  DAG.cpp  DAG.h  DirEntry.cpp  DirEntry.h  Directory.cpp  Directory.h  DlfcnWrapper.cpp  DlfcnWrapper.h  Exception.cpp  Exception.h  FileHelper.cpp  FileHelper.h  GLMHelper.cpp  GLMHelper.h  GeomHelper.cpp  GeomHelper.h  IFrameEndListener.h  IFrameListener.h  ILogHandler.h  ILogSink.h  IPlaybackEndListener.h  IPreRenderListener.h  IntTriple.cpp  IntTriple.h  (+61 more)
src/conradrelais/: ConradRelais.cpp  ConradRelais.h  Makefile.am
src/graphics/: AppleDisplay.cpp  AppleDisplay.h  AppleGLHelper.cpp  AppleGLHelper.h  BCMDisplay.cpp  BCMDisplay.h  Bitmap.cpp  Bitmap.h  BitmapLoader.cpp  BitmapLoader.h  BitmapManager.cpp  BitmapManager.h  BitmapManagerMsg.cpp  BitmapManagerMsg.h  BitmapManagerThread.cpp  BitmapManagerThread.h  BmpTextureMover.cpp  BmpTextureMover.h  CGLContext.cpp  CGLContext.h  CMakeLists.txt  CachedImage.cpp  CachedImage.h  Color.cpp  Color.h  ContribDefs.h  Display.cpp  Display.h  DisplayInfo.cpp  DisplayInfo.h  EGLContext.cpp  EGLContext.h  FBO.cpp  FBO.h  FBOImage.cpp  FBOImage.h  FBOInfo.cpp  FBOInfo.h  Filter.cpp  Filter.h  (+182 more)
src/imaging/: AsyncCamera.cpp  AsyncCamera.h  Blob.cpp  Blob.h  BlobInfo.cpp  BlobInfo.h  CMUCamera.cpp  CMUCamera.h  CMUCameraUtils.cpp  CMUCameraUtils.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraCmd.cpp  CameraCmd.h  CameraInfo.cpp  CameraInfo.h  CameraThread.cpp  CameraThread.h  CameraUtils.cpp  CameraUtils.h  ConnectedComps.cpp  ConnectedComps.h  CoordTransformer.cpp  CoordTransformer.h  DSCamera.cpp  DSCamera.h  DSHelper.cpp  DSHelper.h  DSSampleGrabber.cpp  DSSampleGrabber.h  DSSampleQueue.cpp  DSSampleQueue.h  DeDistort.cpp  DeDistort.h  DistortionParams.cpp  DistortionParams.h  FWCamera.cpp  FWCamera.h  FWCameraUtils.cpp  (+42 more)
src/lmfit/: Makefile.am  lmmin.c
src/oscpack/: CMakeLists.txt  IpEndpointName.cpp  IpEndpointName.h  Makefile.am  MessageMappingOscPacketListener.h  NetworkingUtils.cpp  NetworkingUtils.h  OscHostEndianness.h  OscOutboundPacketStream.cpp  OscOutboundPacketStream.h  OscPacketListener.h  OscPrintReceivedElements.cpp  OscPrintReceivedElements.h  OscReceivedElements.cpp  OscReceivedElements.h  OscTypes.cpp  OscTypes.h  PacketListener.h  TimerListener.h  UdpSocket.cpp
src/parport/: Makefile.am  ParPort.cpp  ParPort.h
src/player/: AVGNode.cpp  AVGNode.h  AppleGLHelper.cpp  AppleGLHelper.h  AppleTrackpadEventSource.cpp  AppleTrackpadEventSource.h  AppleTrackpadInputDevice.cpp  AppleTrackpadInputDevice.h  AreaNode.cpp  AreaNode.h  Arg.cpp  Arg.h  ArgBase.cpp  ArgBase.h  ArgList.cpp  ArgList.h  AsyncVideoDecoder.cpp  AsyncVideoDecoder.h  AudioEngine.cpp  AudioEngine.h  AudioFrame.cpp  AudioFrame.h  AudioParams.cpp  AudioParams.h  AudioSource.cpp  AudioSource.h  BayerizeFXNode.cpp  BayerizeFXNode.h  BilinDemosaicFXNode.cpp  BilinDemosaicFXNode.h  BitmapManager.cpp  BitmapManager.h  BitmapManagerMsg.cpp  BitmapManagerMsg.h  BitmapManagerThread.cpp  BitmapManagerThread.h  BlurFXNode.cpp  (+332 more)
(+901 files in other folders)
